fixed autocomp css z-index prob

--- a/ecommerce/src/components/App.css
+++ b/ecommerce/src/components/App.css
@@ -24,6 +24,7 @@ a{
   position:fixed;
   top:0px;
   left:0;
+  z-index: 500;
 }
 
 .App-header {
